--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
-        run: git remote add space https://ai-product-manager:$HF@huggingface.co/spaces/ai-product-manager/demo
+        run: git remote add space git@hf.co:spaces/ai-product-manager/demo
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
