--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,9 @@ jobs:
           fetch-depth: 0
       - name: Add remote 
         env:
-          HF: ${{ secrets.HF }}
+          HF: ${{ secrets.HG }}
         run: git remote add space git@hf.co:spaces/ai-product-manager/demo
       - name: Push to hub
         env:
-          HF: ${{ secrets.HF }}
-        run: git push --force https://ai-product-manager:$HF@huggingface.co/spaces/ai-product-manager/demo main
+          HF: ${{ secrets.HG }}
+        run: git push --force https://ai-product-manager:$HG@huggingface.co/spaces/ai-product-manager/demo main
